plugins/core/src/building/snapshots/plugins_core__building__tests__it_edits_items_by_gid.snap
---
source: plugins/core/src/building/tests.rs
expression: reply.to_debug_json()?
---
{
  "reply": {
    "taggedJson": [
      "editorReply",
      {
        "editing": {
          "markdown": "Living\n\n~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n\n"
        },
        "key": "E-1",
        "save": {
          "saveQuickEditAction": {
            "copy": {
              "markdown": "!#$value"
            },
            "key": "E-1"
          }
        }
      }
    ]
  }
}
