plugins/core/src/building/snapshots/plugins_core__building__tests__it_edits_raw_items_named.snap
---
source: plugins/core/src/building/tests.rs
expression: reply.to_debug_json()?
---
{
  "editorReply": {
    "editing": {
      "json": {
        "acls": {
          "rules": []
        },
        "creator": null,
        "identity": {
          "private": "Private#4",
          "public": "Public#4"
        },
        "key": "E-3",
        "klass": {
          "py/type": "scopes.ItemClass"
        },
        "parent": null,
        "scopes": {
          "carryable": {
            "kind": {
              "identity": {
                "private": "Private#5",
                "public": "Public#5"
              }
            },
            "quantity": 1.0
          },
          "location": {
            "container": {
              "gid": 3,
              "key": "E-2",
              "klass": "scopes.ItemClass",
              "name": "Welcome Area"
            }
          },
          "props": {
            "core": {
              "gid": {
                "acls": null,
                "value": 4
              },
              "name": {
                "acls": null,
                "value": "Cool Broom"
              }
            }
          }
        }
      }
    },
    "key": "E-3",
    "save": {
      "saveEntityJsonAction": {
        "copy": {
          "json": "!#$value"
        },
        "key": "E-3"
      }
    }
  }
}
